COSMETICS:   do not use the constructor of Boolean but use Boolean.valueOf() instead.